--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "akmalhisyam.my.id",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.1.0",
+  "description": "Muhammad Akmal Hisyam's personal site",
+  "author": "Muhammad Akmal Hisyam",
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "eslint src --fix && yarn format",
+    "format": "prettier --write src",
+    "type-check": "tsc --noEmit",
+    "release": "standard-version",
+    "push-release": "git push --follow-tags origin main",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "12.1.5",
@@ -14,11 +23,29 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.4",
+    "@commitlint/config-conventional": "^16.2.4",
     "@types/node": "17.0.29",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.0",
-    "eslint": "8.14.0",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "eslint": "^8.14.0",
     "eslint-config-next": "12.1.5",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.4.1",
+    "prettier": "^2.6.2",
+    "standard-version": "^9.3.2",
     "typescript": "4.6.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/akmalhisyammm/akmalhisyam.my.id"
+  },
+  "bugs": {
+    "url": "https://github.com/akmalhisyammm/akmalhisyam.my.id/issues"
   }
 }
