--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@fontsource/open-sans": "^4.5.8",
     "framer-motion": "^6",
     "next": "12.1.5",
     "react": "18.1.0",
