--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fontsource/open-sans": "^4.5.8",
     "framer-motion": "^6",
     "next": "12.1.5",
+    "next-pwa": "^5.5.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1"
