refactor: change application name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "akmalhisyam.my.id",
-  "short_name": "akmalhisyam.my.id",
+  "name": "Akmal Hisyam",
+  "short_name": "Akmal Hisyam",
   "description": "Muhammad Akmal Hisyam's personal site",
   "lang": "en-US",
   "start_url": "/",
