refactor: adjust several description and alt image

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "akmalhisyam.my.id",
   "private": true,
   "version": "1.1.0",
-  "description": "Muhammad Akmal Hisyam's personal site",
+  "description": "Akmal Hisyam's personal site",
   "author": "Muhammad Akmal Hisyam",
   "license": "MIT",
   "scripts": {
