--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Akmal Hisyam",
   "short_name": "Akmal Hisyam",
-  "description": "Muhammad Akmal Hisyam's personal site",
+  "description": "Akmal Hisyam's personal site",
   "lang": "en-US",
   "start_url": "/",
   "display": "standalone",
