--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "lint": "next lint",
     "lint:fix": "eslint src --fix && yarn format",
     "format": "prettier --write src",
-    "type-check": "tsc --noEmit",
+    "format:check": "prettier --check src",
+    "type:check": "tsc --noEmit",
     "release": "standard-version",
-    "push-release": "git push --follow-tags origin main",
+    "release:push": "git push --follow-tags origin main",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -24,12 +25,15 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/open-sans": "^5.0.5",
     "framer-motion": "^10.12.18",
+    "i18next": "^23.2.11",
     "next": "^13.4.9",
+    "next-i18next": "^14.0.0",
     "next-pwa": "^5.5.2",
     "next-seo": "^6.1.0",
     "next-sitemap": "^4.1.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.2",
     "react-icons": "^4.10.1"
   },
   "devDependencies": {
