--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lint:fix": "eslint src --fix && yarn format",
     "format": "prettier --write src",
     "format:check": "prettier --check src",
+    "test": "jest --watch",
+    "test:ci": "jest --ci --collect-coverage --verbose",
     "type:check": "tsc --noEmit",
     "release": "standard-version",
     "release:push": "git push --follow-tags origin main",
@@ -39,6 +41,8 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "20.4.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.7",
@@ -50,9 +54,12 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.3",
+    "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
     "lint-staged": "^13.2.3",
     "prettier": "^3.0.0",
     "standard-version": "^9.3.2",
+    "ts-jest": "^29.1.1",
     "typescript": "5.1.6",
     "webpack": "^5.88.1"
   },
