--- a/package.json
+++ b/package.json
@@ -11,57 +11,50 @@
     "postbuild": "next-sitemap --config next-sitemap.config.js",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "eslint src --fix && yarn format",
-    "format": "prettier --write src",
-    "format:check": "prettier --check src",
-    "test": "jest --watch",
-    "test:ci": "jest --ci --collect-coverage --verbose",
+    "lint:fix": "eslint --fix ./src",
+    "format": "prettier --write ./src",
+    "format:check": "prettier --check ./src",
     "type:check": "tsc --noEmit",
     "release": "standard-version",
     "release:push": "git push --follow-tags origin main",
     "prepare": "husky install"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.7.1",
-    "@emotion/react": "^11.11.1",
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/open-sans": "^5.0.5",
-    "framer-motion": "^10.12.18",
-    "i18next": "^23.2.11",
-    "next": "^13.4.9",
-    "next-i18next": "^14.0.0",
+    "framer-motion": "^10.18.0",
+    "i18next": "^23.7.16",
+    "i18next-resources-to-backend": "^1.2.0",
+    "next": "^14.0.4",
+    "next-i18n-router": "^5.2.0",
     "next-pwa": "^5.5.2",
-    "next-seo": "^6.1.0",
-    "next-sitemap": "^4.1.8",
+    "next-sitemap": "^4.2.3",
+    "nextjs-toploader": "^1.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^13.0.2",
-    "react-icons": "^4.10.1"
+    "react-i18next": "^14.0.0",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.6",
-    "@commitlint/config-conventional": "^17.6.6",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.0.0",
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.44.0",
-    "eslint-config-next": "^13.4.9",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.32.2",
+    "@commitlint/cli": "^18.4.4",
+    "@commitlint/config-conventional": "^18.4.4",
+    "@types/node": "20.11.5",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
     "husky": "^8.0.3",
-    "jest": "^29.6.1",
-    "jest-environment-jsdom": "^29.6.1",
-    "lint-staged": "^13.2.3",
-    "prettier": "^3.0.0",
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.2.4",
     "standard-version": "^9.3.2",
-    "ts-jest": "^29.1.1",
-    "typescript": "5.1.6",
-    "webpack": "^5.88.1"
+    "typescript": "5.3.3"
   },
   "repository": {
     "type": "git",
