fix: adjust type check command in github actions

--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -28,7 +28,7 @@ jobs:
         run: yarn lint
 
       - name: Type check application
-        run: yarn typescript:check
+        run: yarn type:check
 
       - name: Build application
         run: yarn build
