--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
 		"start": "next start",
 		"lint": "bun lint:next && bun lint:biome",
 		"lint:next": "next lint",
-		"lint:biome": "bun biome lint ./src",
-		"format": "bun biome check --write ./src next.* next-sitemap.* i18n.* commitlint.*",
-		"format:check": "bun biome ci ./src next.* next-sitemap.* i18n.* commitlint.*",
+		"lint:biome": "biome lint ./src",
+		"format": "biome check --write ./src next.* next-sitemap.* i18n.* commitlint.*",
+		"format:check": "biome ci ./src next.* next-sitemap.* i18n.* commitlint.*",
 		"type:check": "tsc --noEmit",
 		"release": "standard-version",
 		"release:push": "git push --follow-tags origin main",
