--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -10,28 +10,27 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Setup node
-        uses: actions/setup-node@v3
+      - name: Setup bun
+        uses: oven-sh/setup-bun@v2
         with:
-          node-version: '18'
-          cache: 'yarn'
+          bun-version: latest
 
       - name: Install all dependencies
-        run: yarn --frozen-lockfile
+        run: bun install
 
       - name: Format check application
-        run: yarn format:check
+        run: bun format:check
 
       - name: Lint application
-        run: yarn lint
+        run: bun lint
 
       - name: Type check application
-        run: yarn type:check
+        run: bun type:check
 
       - name: Build application
-        run: yarn build
+        run: bun run build
         env:
           UMAMI_WEBSITE_ID: ${{secrets.UMAMI_WEBSITE_ID}}
           UMAMI_WEBSITE_URL: ${{secrets.UMAMI_WEBSITE_URL}}
