--- a/biome.json
+++ b/biome.json
@@ -9,6 +9,9 @@
       "recommended": true
     }
   },
+  "formatter": {
+    "indentStyle": "space"
+  },
   "javascript": {
     "formatter": {
       "quoteStyle": "single"
