chore: setup cross env, remove unused deps, and adjust next sitemap

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "format": "biome check --write ./src next.* next-sitemap.* i18n.* commitlint.*",
     "format:check": "biome ci ./src next.* next-sitemap.* i18n.* commitlint.*",
     "type:check": "tsc --noEmit",
-    "release": "standard-version",
+    "release": "cross-env HUSKY=0 standard-version",
     "release:push": "git push --follow-tags origin main",
     "prepare": "husky"
   },
@@ -44,17 +44,12 @@
     "@commitlint/config-conventional": "^19.2.2",
     "@types/node": "20.14.9",
     "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
-    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.3",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
-    "prettier": "^3.3.2",
     "standard-version": "^9.5.0",
     "typescript": "^5.4.5"
   },
